samples/_failures_safe/1761699103_56bae6_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_6ce77f72.c: In function ‘tokenize’:
./samples/SAFE/__tmp_6ce77f72.c:178:20: error: expected declaration or statement at end of input
  178 |             struct Token invalid_token;
      |                    ^~~~~
./samples/SAFE/__tmp_6ce77f72.c:178:20: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_6ce77f72.c:178:20: error: expected declaration or statement at end of input
